Fri Oct 24 17:03:56 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdoc/cf_types.html: Make clear distinction between String List and
      Quoted String List.

Fri Oct 24 15:30:08 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htsearch/Display.cc: Fix bug #829746. Applied Niel Kohl's fix for this,
      to check if words input given before trying to use it, to avoid NULL
      argument to syslog().

Fri Oct 24 15:15:53 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htsearch/Display.cc: Fix bug #578570. The enddate handling now works
      correctly for a large, negative startday value.

Fri Oct 24 12:47:51 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

    * htdig/HTML.cc (ctor): Fix obvious typo in metadatetags.Pattern setting.

Thu Oct 23 10:27:18 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htcommon/default.cc:  Fix bug #828808.  Default  startyear  to empty
      Document "startyear defaults to 1970 if a start/end date set".

Thu Oct 23 12:14:30 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/htdig.cc: restored the code before Oct 21 (fixes ##828628)

Thu Oct 23 11:41:15 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdig/Retriever.[h,cc]: removed 'head_before_get' overriding by
      restoring the code before Oct 21.
    * htdig/Document.[h,cc]: ditto, with the exception of detaching the HEAD
      before GET mechanism from the persistent connections'.
    * htcommon/defaults.cc: improved documentation (even though it needs
      corrections by an english-speaking developer).
    * These changes fix bug #828628

Wed Oct 22 2003 Lachlan Andrew <lha@users.sourceforge.net>

    * htsearch/parser.cc: Applied Neal's patch to fix bug #823403
      Documents only added to search list if they were successfully dug.
      Lines 237-238 of htsearch/Display.cc
        if (!ref || ref->DocState() != Reference_normal)
	    continue;