@@ -1,4 +1,6 @@
-Fri Oct 24 17:03:56 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+Fri Oct 24 17:09:46 2003  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
+
+    * htdoc/htmerge.html: Added two clarifications to -m option description.
 
     * htdoc/cf_types.html: Make clear distinction between String List and
       Quoted String List.
